fix responsive on mobile for homepage, register pages

--- a/register/register-style.css
+++ b/register/register-style.css
@@ -37,8 +37,9 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    margin: 1rem 10vw;
+    margin: 3rem 10vw;
     padding: 1rem;
+    gap: 3rem;
 }
 
 .register-forms, .donate-forms, .student-forms {
@@ -46,7 +47,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 4rem 2rem;
     padding: 3rem 2.5rem;
     border: 1px solid #e5e5e5;
     border-radius: 1rem;
@@ -124,7 +124,7 @@
 }
 /* Smaller Smartphones ---------------- */
 @media only screen and (max-width : 680px) {
-    #register-sponsor-main-section {margin-top: 10rem;}
+    /* #register-sponsor-main-section {margin-top: 10rem;} */
     .title-container {height: 30vw;}
     .title-container .title-inner-container {justify-content: end;}    
     .register-forms, .donate-forms {margin: 1rem; padding: 2rem;}
