--- a/static/css/header-style.css
+++ b/static/css/header-style.css
@@ -64,7 +64,7 @@
     color: white;
     background-color: #1a685b;
     padding: 1rem;
-    min-width: 8rem;
+    border-radius: 5px;
 }
 
 /* hidden by default */
@@ -83,7 +83,7 @@
 }
 
 #nav-dropdown-btn:hover {background-color: #ffac00;}
-.show {display: block;}
+
 
 .register-btn-container {
     position: relative;
@@ -106,23 +106,24 @@
     position: relative;
     display: none;
 }
-.register-dropdown-item {
+#register-dropdown-btn {
     position: relative;
     display: block;
-    min-width: 8rem;
+    min-width: 6rem;
     padding: 1rem;
     text-align: center;
     background-color: #ffac00;
     color: white;
-    border-radius: 2rem;
+    border-radius: 5px;
     box-shadow: 0.125rem 0.125rem 0.125rem rgba(51, 51, 51, 0.3);
 }
 /* hidden by default */
 .register-dropdown-list {
     display: none; 
     position: absolute;
+    right: 0;
     background-color: #1a685b;
-    /* min-width: 18rem; */
+    min-width: 8rem;
     box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0,0.2);
     z-index: inherit;
 }
@@ -132,9 +133,11 @@
     width: 100%;
 }
 
-.register-dropdown-item:hover {background-color: #1a685b; color: #ffac00;}
-.register-dropdown-container:hover .register-dropdown-list {display: block;}
+#register-dropdown-btn:hover {background-color: #1a685b; color: #ffac00;}
+/* .register-dropdown-container:hover .register-dropdown-list {display: block;} */
 .register-dropdown-list a:hover {background-color: #ffac00;}
+
+.show {display: block;}
 
 .search-inner-container {
     display: flex;
@@ -274,6 +277,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .logo-container {width: 100%;}
+    /* .logo-container {width: 100%;} */
     #user-header .right-side-bar .user-search-container input {display: none;}
+    .search-container {display: none;}
 }
